Fix new player in features on mobile

--- a/css/src/features.less
+++ b/css/src/features.less
@@ -8,8 +8,8 @@ section#features {
   font-size: 1.2em;
   header {
     text-align: center;
-    width: 90%;
-    margin: 1em 5%;
+    width: 94%;
+    margin: 1em 3%;
   }
   section#screenshot {
     .grid(50%);
@@ -18,6 +18,7 @@ section#features {
     .audio-presenter {
       width: 80%;
       margin: 0 0 0 20%;
+      transform: translate3d(0,0,0,0);
     }
     img {
       width: 80%;
@@ -47,6 +48,10 @@ section#features {
       .grid(90%);
       margin-right: 5%;
       margin-left: 5%;
+      .audio-presenter {
+        width: 94%;
+        margin: 1.5em 3%;
+      }
       img {
         width: 100%;
         margin: 1em 0 0 0;
